-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.5.0
-
None
-
Windows 7 x64, Qt 5.4, Qt 5.5. Exar VCP driver v. 2.2
QSerialPort fails to open virtual com ports from Exar using latest official drivers or Windows Update drivers.
The problem in QSerialPortPrivate::initialize function.
It calls GetCommState driver returns DCB struct with DCB.BaudRate set to 0, which is reasonable since port is not yet configured. After that it set some flags and calls to updateDcb() which tries to set new settings with SetCommState. And SetCommState returns false if DCB.BaudRate is 0.
Solution is simple. Just set DCB.BaudRate some non-zero value before trying to call SetCommState.
For Gerrit Dashboard: QTBUG-46993 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
115767,6 | Fix opening of Exar VCP on Windows | 5.5 | qt/qtserialport | Status: MERGED | +2 | 0 |
120995,2 | Fix opening of Exar VCP on Windows | qt4-dev | qt/qtserialport | Status: MERGED | +2 | 0 |